--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -32,10 +32,11 @@ jobs:
       - name: Run scraper
         run: python scraper.py
 
-      - name: Commit results
+      - name: Commit & Push changes
         run: |
+          git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add *.csv
-          git commit -m "Auto-update CSV $(date)" || echo "Nothing to commit"
+          git add -A
+          git commit -m "Update CSV data" || echo "No changes to commit"
           git push
+
